added home page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,30 @@
-<p>home-page works!</p>
+<div class="home-page__container">
+    <h1>Welcome to Jokill</h1>
+    <article>
+        <h2>What is Jokill?</h2>
+        <p>
+            Jokill is a social network ideated for matching developers or people trying to build an IT career with some
+            mentors. Users could share their roadmaps for some years about what they wanted to learn and get feedback
+            from other more experienced mates.
+        </p>
+    </article>
+    <article>
+        <h2>Which are the current features in the roadmap?</h2>
+        <p>
+            For the first version, I would like it to implement these features:
+        </p>
+        <ul>
+            <li>A home page explaining what's Jokill about</li>
+            <li>Registration page, asking for the email address, username, and password</li>
+            <li>Login page</li>
+            <li>Profile page to define your short/long term objectives in your career and make them public or private</li>
+            <li>Search engine to find other users and their public objectives</li>
+        </ul>
+    </article>
+    <article>
+        <h2>Where can I find more info about Jokill?</h2>
+        <p>
+            This is a portfolio project and you can get more info about it in my <a href="https://www.ramonlence.com" target="_blank">blog</a>.
+        </p>
+    </article>
+</div>
