--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<header>
-
-</header>
-<router-outlet></router-outlet>
-<footer>
-    
-</footer>
+<div class="app__container">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
