--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,8 +1,7 @@
-@import 'src/styles.scss';
 header {
-    background-color: $color1;
+    background-color: var(--color1);
     h1 {
-        color: $white;
+        color: var(--color-white);
         font-size: 1.5rem;
         font-weight: bold;
     }
