--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,7 +1,6 @@
-@import 'src/styles.scss';
 .home-page {
     &__container {
-        color: $color4;
+        color: var(--color4);
         padding: 0.5rem;
         h1 {
             font-size: 2rem;
